src/snapshots/http_dragonfly__config__test__good_config@02-simple-config.yaml.snap
---
source: src/config.rs
expression: "AppConfig::from_file(&String::from(path.to_str().unwrap()), ctx)"
input_file: tests/configs/good/02-simple-config.yaml
---
Ok(
    AppConfig {
        listeners: [
            ListenerConfig {
                id: Some(
                    "Listener-1",
                ),
                listen_on: ListenOn {
                    ip: 8.8.8.8,
                    port: 4321,
                },
                timeout: 30s,
                strategy: AlwaysOverride,
                headers: Some(
                    [
                        HeaderTransform {
                            action: Drop(
                                "*",
                            ),
                            value: None,
                        },
                        HeaderTransform {
                            action: Add(
                                "X-Added-Header",
                            ),
                            value: Some(
                                "something",
                            ),
                        },
                        HeaderTransform {
                            action: Update(
                                "Authorization",
                            ),
                            value: Some(
                                "${SOME_AUTH_TOKEN}",
                            ),
                        },
                        HeaderTransform {
                            action: Drop(
                                "X-Forwarded-For",
                            ),
                            value: None,
                        },
                    ],
                ),
                methods: Some(
                    {
                        Get,
                    },
                ),
                targets: [
                    TargetConfig {
                        id: Some(
                            "Target-0",
                        ),
                        url: "https://test-1.www.com/",
                        headers: None,
                        body: Some(
                            "{\"method\": \"${CTX_REQUEST_METHOD}\"}",
                        ),
                        timeout: 60s,
                        on_error: Status,
                        error_status: Some(
                            555,
                        ),
                        condition: None,
                        tls: None,
                        aws_sigv4: None,
                    },
                    TargetConfig {
                        id: Some(
                            "Target-1",
                        ),
                        url: "https://test-2.www.com/some/path",
                        headers: None,
                        body: None,
                        timeout: 60s,
                        on_error: Propagate,
                        error_status: None,
                        condition: Some(
                            Filter(
                                ConditionFilter {
                                    filter: ".body.target == \"1\"",
                                },
                            ),
                        ),
                        tls: None,
                        aws_sigv4: None,
                    },
                    TargetConfig {
                        id: Some(
                            "Target-2",
                        ),
                        url: "https://test-3.www.com/?${CTX_REQUEST_QUERY}",
                        headers: Some(
                            [
                                HeaderTransform {
                                    action: Update(
                                        "Authorization",
                                    ),
                                    value: Some(
                                        "${TARGET_2_AUTH_TOKEN}",
                                    ),
                                },
                                HeaderTransform {
                                    action: Drop(
                                        "X-Added-Header",
                                    ),
                                    value: None,
                                },
                            ],
                        ),
                        body: None,
                        timeout: 60s,
                        on_error: Propagate,
                        error_status: None,
                        condition: None,
                        tls: None,
                        aws_sigv4: None,
                    },
                ],
                log_target_status: false,
                response: ResponseConfig {
                    target_selector: Some(
                        "Target-0",
                    ),
                    failed_status_regex: "4\\d{2}|500",
                    no_targets_status: 599,
                    override_config: Some(
                        OverrideConfig {
                            status: Some(
                                200,
                            ),
                            body: Some(
                                "{\"status\": \"ok\"}\n",
                            ),
                            headers: Some(
                                [
                                    HeaderTransform {
                                        action: Update(
                                            "content-type",
                                        ),
                                        value: Some(
                                            "application/json",
                                        ),
                                    },
                                    HeaderTransform {
                                        action: Add(
                                            "X-Http-Splitter-Version",
                                        ),
                                        value: Some(
                                            "0.5.1",
                                        ),
                                    },
                                    HeaderTransform {
                                        action: Add(
                                            "X-Http-Splitter-Response-Source",
                                        ),
                                        value: Some(
                                            "${CTX_TARGET_ID}",
                                        ),
                                    },
                                ],
                            ),
                        },
                    ),
                },
                tls: TlsConfig {
                    verify: Yes,
                    ca: None,
                },
            },
        ],
    },
)
