src/snapshots/http_dragonfly__config__test__good_config@90-strategy-conditional_routing.yaml.snap
---
source: src/config.rs
expression: "AppConfig::from_file(&String::from(path.to_str().unwrap()), ctx)"
input_file: tests/configs/good/90-strategy-conditional_routing.yaml
---
Ok(
    AppConfig {
        listeners: [
            ListenerConfig {
                id: None,
                listen_on: ListenOn {
                    ip: 0.0.0.0,
                    port: 8080,
                },
                timeout: 10s,
                strategy: ConditionalRouting,
                headers: None,
                methods: None,
                targets: [
                    TargetConfig {
                        id: Some(
                            "google-1",
                        ),
                        url: "https://www.google.com/",
                        headers: None,
                        body: None,
                        timeout: 60s,
                        on_error: Propagate,
                        error_status: None,
                        condition: Some(
                            Default,
                        ),
                        tls: None,
                        aws_sigv4: None,
                    },
                    TargetConfig {
                        id: Some(
                            "google-2",
                        ),
                        url: "https://www.google.com/",
                        headers: None,
                        body: None,
                        timeout: 60s,
                        on_error: Propagate,
                        error_status: None,
                        condition: Some(
                            Filter(
                                ConditionFilter {
                                    filter: ".body.field == 1",
                                },
                            ),
                        ),
                        tls: None,
                        aws_sigv4: None,
                    },
                    TargetConfig {
                        id: Some(
                            "google-3",
                        ),
                        url: "https://www.google.com/",
                        headers: None,
                        body: None,
                        timeout: 60s,
                        on_error: Propagate,
                        error_status: None,
                        condition: Some(
                            Filter(
                                ConditionFilter {
                                    filter: ".headers.host == \"google.com\"",
                                },
                            ),
                        ),
                        tls: None,
                        aws_sigv4: None,
                    },
                    TargetConfig {
                        id: Some(
                            "google-4",
                        ),
                        url: "https://www.google.com/",
                        headers: None,
                        body: None,
                        timeout: 60s,
                        on_error: Propagate,
                        error_status: None,
                        condition: Some(
                            Filter(
                                ConditionFilter {
                                    filter: ".body.id_from_list as $c | \"0-1-2-3-4 5-6-7-8-9\" | split(\" \") | any(. == $c)",
                                },
                            ),
                        ),
                        tls: None,
                        aws_sigv4: None,
                    },
                ],
                log_target_status: false,
                response: ResponseConfig {
                    target_selector: None,
                    failed_status_regex: "4\\d{2}|5\\d{2}",
                    no_targets_status: 500,
                    override_config: None,
                },
                tls: TlsConfig {
                    verify: Yes,
                    ca: None,
                },
            },
        ],
    },
)
