src/snapshots/http_dragonfly__config__test__wrong_config@06-wrong-error-override-config.yaml.snap
---
source: src/config.rs
expression: "AppConfig::owned(&String::from(path.to_str().unwrap()), &ctx)"
input_file: tests/configs/wrong/06-wrong-error-override-config.yaml
---
Err(
    invalid config: `error_status` should be set if `on_error` is `status`, target `TARGET-https://www.google.com/`,
)
