src/snapshots/http_dragonfly__config__test__wrong_config@93-wrong-condition.yaml.snap
---
source: src/config.rs
expression: "AppConfig::from_file(&String::from(path.to_str().unwrap()), ctx)"
input_file: tests/configs/wrong/93-wrong-condition.yaml
---
Err(
    unable to parse config: listeners[0].targets[1].condition: invalid config: invalid conditional expression: `/` at line 9 column 18,
)
